--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,229 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Piazzolla&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
+.Menu {
+  background-color: #020202;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border-bottom: 3px solid chartreuse;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #e7e7e7;
+  margin: 0;
+  padding: 0;
 }
+
+header {
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style-type: none;
+  font-family: 'Roboto', sans-serif;
+  position: sticky;
+  margin: 0;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #030303;
+  color: #ffffff;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+
+.poster {
+  display: flex;
+  justify-content: center;
+}
+
+.characters {
+  /* movie-container */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+.char {
+
+  width : 200px;
+  margin: 1rem; 
+  background-color: black  ;
+  color: rgb(255, 255, 255);
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
+  overflow: hidden;
+  position: relative;
+}
+
+
+.char img{
+  width:200px;
+  height: 300px;
+}
+
+
+/* On mouse-over, add a deeper shadow */
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
+.char-info{
+font-family: 'Roboto', sans-serif;
+padding: 2%;
+position: absolute;
+bottom:0;
+right:0;
+left: 0;
+background-color: black;
+color: rgb(255, 255, 255);
+transform: translateY(100%);
+transition: 0.3s ease-in-out;
+height: 100%;
+overflow: auto;
+}
+
+
+.char:hover .char-info{
+
+  transform: translateY(0%);
+}
+
+
+.episodes{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+
+.episode{
+  width: 300px;
+  background-color: black;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 2px;
+  padding:10px;
+  align-items: center;
+  border-radius: 5px;
+  /* justify-content: center; */
+}
+
+.episode:hover{
+  color: rgb(178, 255, 101);
+  transition: 0.1s ease-in-out;
+}
+
+.title{
+  color: chartreuse;
+  border-bottom: 3px solid chartreuse;
+  height: 40px;
+  padding: 10px;
+}
+.epi-info{
+  position: relative;
+  transition: 0.4s ease-in-out;
+  font-family: 'Robot', sans-serif;
+}
+
+.logo{
+  font-family: 'Roboto', sans-serif;
+  height: auto;
+  width: auto;
+  padding: 0;
+  margin: 0;
+}
+
+.logo:hover{
+  color: chartreuse;
+  transition: 0.6s ease-in-out;
+}
+
+
+.quotes{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+ .quote{
+  width:400px;
+  height: auto;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  border: 2px solid chartreuse;
+  margin: 10px;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+.quote:hover .hidden{
+  visibility: visible;
+  transform: translateX(50%);
+  color: chartreuse;
+  /* transform: translateX(10%); */
+   transition:0.8s ease-in-out
+}  
+
+.quote:hover{ 
+  color: chartreuse;
+  transition: 0.8s ease-in-out;
+}
+
+.hidden{
+visibility: hidden;
+}
+
+.deaths{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.death{
+  width:400px;
+  height: auto;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  border: 2px solid chartreuse;
+  margin: 10px;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+.death:hover .death-info{
+  visibility: visible;
+  color: chartreuse;
+  /* transform: translateX(10%); */
+   transition:0.2s ease-in-out
+}  
+
+.death:hover{ 
+  color: chartreuse;
+  transition: 0.2s ease-in-out;
+}
+
+.death-info{
+visibility: hidden;
+}
+
+/* ////////////////////////////// */
