--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
+
+.main{
+  margin-top: 80px;
+  z-index: -1;
+  overflow: auto;
+}
+.poster {
+  background-image: url("./poster3.png");
+  padding-top: 100px;
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  /* overflow: auto; */
+ background-size: contain;
+  justify-content: center;
+  background-attachment: fixed;
+}
+
+.text{
+  background-color: black;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+.About{
+  background-color: black;
+  color: chartreuse;
+
+}
+
+
+.footer{
+  background-attachment: scroll;
+  width:100%;
+  height: 300px;
+  float: left;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  align-items: center;
+  vertical-align: middle;
+  border-left: 10 px solid chartreuse;
+}
+
 .Menu {
+  z-index: 1;
+  overflow:hidden;
+  top: 0;
+  position: fixed;
   background-color: #020202;
   display: flex;
   flex-direction: row;
@@ -11,7 +60,7 @@
   margin: 0;
   padding: 0;
   border-bottom: 3px solid chartreuse;
-
+  /* background-attachment: fixed; */
 }
 
 body{
@@ -40,12 +89,6 @@ ul {
   align-items: center;
 }
 
-
-
-.poster {
-  display: flex;
-  justify-content: center;
-}
 
 .characters {
   /* movie-container */
