--- a/src/index.css
+++ b/src/index.css
@@ -286,8 +286,8 @@ visibility: hidden;
   visibility: visible;
   opacity: 1;
   color: chartreuse;
-  /* transform: translateX(10%); */
-   transition:0.2s ease-in-out
+  transform: translateX(5%);
+   transition:0.5s ease-in-out
 }  
 
 .death:hover{ 
